// Vitest Snapshot v1

exports[`getTitreTypeTypeByDomaineId %p c 1`] = `
[
  "ap",
  "ar",
  "pc",
]
`;

exports[`getTitreTypeTypeByDomaineId %p f 1`] = `
[
  "cx",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p g 1`] = `
[
  "ar",
  "cx",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p h 1`] = `
[
  "ap",
  "cx",
  "in",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p i 1`] = `
[
  "cx",
  "in",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p m 1`] = `
[
  "ap",
  "ar",
  "ax",
  "cx",
  "in",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p r 1`] = `
[
  "cx",
  "in",
  "pr",
  "px",
]
`;

exports[`getTitreTypeTypeByDomaineId %p s 1`] = `
[
  "cx",
  "pr",
]
`;

exports[`getTitreTypeTypeByDomaineId %p w 1`] = `
[
  "ap",
  "cx",
  "pr",
  "px",
]
`;
